# sysrepo

./: CMakeLists.txt
swig/: CMakeLists.txt
swig/cpp/examples/: CMakeLists.txt  cpp_application_example.cpp  get_items_example.cpp  get_items_iter_example.cpp
swig/cpp/src/: Session.cpp  Session.h  Sysrepo.cpp  Sysrepo.h  Value.cpp  Value.h
swig/lua/: libsysrepoLua51.i  sysrepoLua.i
swig/lua/examples/: application_example.lua  get_items_example.lua  get_items_iter_example.lua  set_item_example.lua
